CHORE :: mdx 파일 수정

--- a/src/components/docsMDX/Start/규칙.mdx
+++ b/src/components/docsMDX/Start/규칙.mdx
@@ -14,9 +14,9 @@
 <br/>
 ## 추가 규칙
 <br/>
-동아리 부장보다 먼저 착석할 수 없습니다
+동아리 부장(류승찬)보다 먼저 착석할 수 없습니다
 
-동아리 부장에게 다가서서 먼저 인사해야 합니다
+동아리 부장(류승찬)에게 다가서서 먼저 인사해야 합니다
 <br/>
 <br/>
 <br/>
