MDX :: 플러스 내용 수정

--- a/src/components/plus/plusDocs.mdx
+++ b/src/components/plus/plusDocs.mdx
@@ -11,7 +11,15 @@
 <br/>
 오프에어 플러스는 아직 이용할 수 없는 기능입니다
 
-사용할 수 있을때까지 기다려주세요!
+그전까지는 깃허브 fork로 pr 요청을 날려주세요!
+
+<br/>
+<br/>
+## 수정 요청
+
+mdx 파일 위치 : src/components/docsMDX/~
+
+커밋 메시지 : MDX :: 수정 내용
 <br/>
 <br/>
 <br/>
