MDX :: 이미지 추가

--- a/src/components/docsMDX/Gear/AUDIO MIXER.mdx
+++ b/src/components/docsMDX/Gear/AUDIO MIXER.mdx
@@ -1,5 +1,8 @@
 ## 개요
 <br/>
+<img src="/assets/gear/AUDIO MIXER/주요기능.png" alt="참고 이미지" width="80%" height="auto" />
+<br/>
+<br/>
 Audio Mixer 기능은 4채널의 영상 입력, NET/USB, 외부 오디오, 동영상 등의 PGM용 10채널 스테레오 입력과 출력 1,2,3의 출력 조정기능이 있습니다
 <br/>
 <br/>
@@ -35,6 +38,9 @@ PC 오디오는 윈도우 프로그램에서 PPT, 인터넷 등의 PC 모드시 
 <br/>
 <br/>
 ## 외부 오디오 출력 지연 설정
+<br/>
+<img src="/assets/gear/AUDIO MIXER/딜레이.png" alt="참고 이미지" width="80%" height="auto" />
+<br/>
 <br/>
 외부 오디오 출력 XLR 단자와 Phone 출력은 항상 프로그램 영상의 오디오 신호가 출력이 됩니다
 
