--- a/src/components/docsMDX/Gear/Play List 순서 송출.mdx
+++ b/src/components/docsMDX/Gear/Play List 순서 송출.mdx
@@ -6,6 +6,9 @@ PC에 저장된 여러 가지 콘텐츠 및 외부 입력신호를 미리 순서
 <br/>
 ## 순서 송출 기능
 <br/>
+<img src="/assets/gear/순서 송출/순서 송출.png" alt="참고 이미지" width="80%" height="auto" />
+<br/>
+<br/>
 ### 방법
 <br/>
 1. Play List의 송출 제어 부에서 파일 추가를 누르면 새로운 리스트가 추가됩니다
