--- a/src/components/docsMDX/Gear/단문 메시지 송출.mdx
+++ b/src/components/docsMDX/Gear/단문 메시지 송출.mdx
@@ -8,6 +8,9 @@
 <br/>
 ## 단문 메시지 작성 및 송출
 <br/>
+<img src="/assets/gear/단문 메시지/단문.png" alt="참고 이미지" width="80%" height="auto" />
+<br/>
+<br/>
 ### 단문 메시지 작성
 <br/>
 ‘추가’ 버튼을 눌러서 새로운 페이지가 생성되면 문자 입력 창에 문자를 입력합니다
