--- a/src/components/docsMDX/Gear/동영상 재생 송출.mdx
+++ b/src/components/docsMDX/Gear/동영상 재생 송출.mdx
@@ -8,6 +8,10 @@ PC의 HDD에 저장된 동영상 파일은 DDR로 미디어 채널로 등록할 
 <br/>
 ## DDR 동영상 재생
 <br/>
+<img src="/assets/gear/동영상 송출/동영상 송출1.png" alt="참고 이미지" width="80%" height="auto" />
+<img src="/assets/gear/동영상 송출/동영상 송출2.png" alt="참고 이미지" width="80%" height="auto" />
+<br/>
+<br/>
 1. 모드 설정 프리셋 창에서 DDR1 또는 DDR2 탭 폴더를 선택합니다
 2. 파일열기 아이콘을 눌러 윈도우 탐색 창에서 재생하고 하는 파일을 선택합니다
 3. 갤러리에 설정된 동영상을 두 번 클릭하면 DDR의 미리 보기 창의 DDR 보기에 등록됩니다
@@ -17,6 +21,9 @@ PC의 HDD에 저장된 동영상 파일은 DDR로 미디어 채널로 등록할 
 <br/>
 <br/>
 ## DDR 동영상 재생
+<br/>
+<img src="/assets/gear/동영상 송출/동영상 재생.png" alt="참고 이미지" width="80%" height="auto" />
+<br/>
 <br/>
 1. 미리 보기 창에 등록된 동영상은 프로그램 출력 시에 처음/일시정지/재생버튼으로 동영상의 재생위치를 설정할 수 있습니다
 2. 설정 기어를 누르면 프로그램 출력이 종료된 후의 동영사의 대기상태를 지정 가능하빈다
@@ -28,25 +35,9 @@ PC의 HDD에 저장된 동영상 파일은 DDR로 미디어 채널로 등록할 
 <br/>
 ### 재생 가능한 동영상 확장자
 <br/>
-- .mpg
-- .mpeg
-- .ts
-- .m2t
-- .m2ts
-- .mts
-- .mp4
-- .mov
-- .mxf
-- .gxf
-- .dv
-- .flv
-- .vob
-- .asf
-- .wmv
-- .m4v
-- .avi
-- .mkv
-- .webm
+<img src="/assets/gear/동영상 송출/확장자.png" alt="참고 이미지" width="80%" height="auto" />
+<br/>
+
 <br/>
 <br/>
 <br/>
