--- a/src/components/docsMDX/Gear/배경 오디오 설정.mdx
+++ b/src/components/docsMDX/Gear/배경 오디오 설정.mdx
@@ -1,5 +1,8 @@
 ## 개요
 <br/>
+<img src="/assets/gear/배경 오디오/오디오.png" alt="참고 이미지" width="80%" height="auto" />
+<br/>
+<br/>
 배경 오디오 기능은 통합 방송장비의 동작모드에 관계없이 설정된 음악을 PGM 오디오 출력으로 송출하는 기능입니다
 <br/>
 <br/>
