--- a/src/components/docsMDX/Gear/원격.mdx
+++ b/src/components/docsMDX/Gear/원격.mdx
@@ -6,6 +6,9 @@
 <br/>
 ## 원격 지원 접속
 <br/>
+<img src="/assets/gear/원격 AS/AS.png" alt="참고 이미지" width="80%" height="auto" />
+<br/>
+<br/>
 1. 제품에 인터넷 접속이 가능한 LAN을 연결합니다
 <br/>
 2. 원격지원을 위하여 Team Viewer를 구입 설치합니다
