--- a/src/components/docsMDX/Gear/이미지,PPT 송출.mdx
+++ b/src/components/docsMDX/Gear/이미지,PPT 송출.mdx
@@ -18,6 +18,9 @@
 <br/>
 ## PPT 파일 송출
 <br/>
+<img src="/assets/gear/PPT/PPT.png" alt="참고 이미지" width="80%" height="auto" />
+<br/>
+<br/>
 PPT 파일을 송출하려면 PPT가 설치 되어있어야 합니다
 
 또한 방송 출력으로 송출하기 위해서는 PPT 파일의 버전이 확인되고 PPT 파일 불러오기에서 등록 창에 페이지 미리보기가 표시되어야 합니다
