--- a/src/components/docsMDX/Gear/입출력 바이패스 설정.mdx
+++ b/src/components/docsMDX/Gear/입출력 바이패스 설정.mdx
@@ -1,4 +1,7 @@
 ## 개요
+<br/>
+<img src="/assets/gear/바이패스 설정/바이패스.png" alt="참고 이미지" width="80%" height="auto" />
+<br/>
 <br/><br/>
 프로그램의 시작, 종료, 시스템 종료 시에 출력을 지정할 수 있는 기능입니다
 <br/><br/>
