--- a/src/components/docsMDX/Software/명칭 및 기능.mdx
+++ b/src/components/docsMDX/Software/명칭 및 기능.mdx
@@ -1,7 +1,11 @@
-## 시스템 상태 표시
+## 참고 이미지
+<br/>
+<img src="/assets/software/명칭및기능.png" alt="참고 이미지" width="80%" height="auto" />
+<br/>
+<br/>
+## (1) 시스템 상태 표시
 <br/>
 ### 위치
-
 프로그램 최상단에 위치합니다
 <br/>
 ### 설명
@@ -12,7 +16,7 @@
 <br/>
 <br/>
 <br/>
-## 시스템 INPUT MIXER
+## (2) 시스템 INPUT MIXER
 <br/>
 ### 위치
 
@@ -26,7 +30,7 @@
 <br/>
 <br/>
 <br/>
-## 시스템 OUTPUT MIXER
+## (3) 시스템 OUTPUT MIXER
 <br/>
 ### 위치
 
@@ -40,7 +44,7 @@ INPUT과 동일한 기능을 가지고 있습니다
 <br/>
 <br/>
 <br/>
-## 시스템 환경 설정
+## (7) 시스템 환경 설정
 <br/>
 ### 위치
 
