--- a/src/components/docsMDX/Gear/NET & USB.mdx
+++ b/src/components/docsMDX/Gear/NET & USB.mdx
@@ -6,13 +6,17 @@
 <br/>
 ## Net1, Net2의 URL 경로 지정
 <br/>
+<img src="/assets/gear/NET/NET.png" alt="참고 이미지" width="80%" height="auto" />
+<br/>
+<br/>
 인터넷 동영상은 유튜브가 수신 가능합니다
-
+<br/>
 해당 사이트의 URL 주소에서 수신을 확인하여 주세요
 
 1. IP채널 5번, 6번의 환경설정 기어 아이콘을 클릭합니다
 2. IP 수신 모드를 선택하여 하단의 URL 주소 입력 창을 확인합니다
 3. 기존의 수신 가능한 주소를 선택하여 URL 주소 입력을 완료합니다
+<br/>
 <br/>
 ### 유튜브 새로운 주소 입력
 <br/>
