--- a/src/components/docsMDX/Gear/동영상 녹화.mdx
+++ b/src/components/docsMDX/Gear/동영상 녹화.mdx
@@ -6,6 +6,9 @@
 <br/>
 ## Live 영상 녹화
 <br/>
+<img src="/assets/gear/녹화/녹화.png" alt="참고 이미지" width="80%" height="auto" />
+<br/>
+<br/>
 동영상 녹화는 프로그램 상단에 녹화 버튼을 누르면 녹화가 시작됩니다
 
 기어창에서 녹화 입력신호 및 녹화모드를 설정한 후에 사용하여 주세요
@@ -13,6 +16,10 @@
 1. 프로그램 녹화시작/정지/일시 정지 버튼 제어가 있습니다
 <br/>
 2. Recording 버튼을 누르면 녹화파일의 경로가 지정된 윈도우 탐색 창이 열리고 녹화 파일명을 지정합니다
+<br/>
+<br/>
+<img src="/assets/gear/녹화/녹화2.png" alt="참고 이미지" width="80%" height="auto" />
+<br/>
 <br/>
     1. ⇒ 파일명 지정을 마치면 곧바로 녹화가 시작됩니다
 3. 설정 창의 메뉴에서 REC 관련 모드를 미리 설정해주세요
