--- a/src/components/docsMDX/Software/시스템 상태표시.mdx
+++ b/src/components/docsMDX/Software/시스템 상태표시.mdx
@@ -1,14 +1,19 @@
+## 참고 이미지
+<br/>
+<img src="/assets/software/상태표시.png" alt="참고 이미지" width="80%" height="auto" />
+<br/>
+<br/>
 ## 설명 방식
 <br/>
 기능을 왼쪽에서 오른쪽으로 서술합니다
 <br/>
 <br/>
-## 기본 정보
+## (1) 기본 정보
 <br/>
 학교방송 운용 프로그램명과 각 학교명을 표시합니다
 <br/>
 <br/>
-## 리모트 컨트롤러
+## (2) 리모트 컨트롤러
 <br/>
 기본 정보 오른쪽 4개의 상태 표시등
 
@@ -17,14 +22,14 @@
 사용시 녹색으로 표시됩니다
 <br/>
 <br/>
-## ON AIR
+## (3) ON AIR
 <br/>
 현재 방송 상태를 나타냅니다
 
 방송중일 경우 녹색으로 표시됩니다
 <br/>
 <br/>
-## PC
+## (4) PC
 <br/>
 pc를 통해 방송이 송출될 경우 푸른색으로 표시됩니다
 <br/>
